@@ -342,46 +342,48 @@ _dc1394_capture_basic_setup (dc1394camera_t * camera,
 {
   dc1394error_t err;
   uint32_t bpp;
+  dc1394video_mode_t video_mode;
+  dc1394framerate_t framerate;
 
   frame->camera = camera;
 
-  err=dc1394_video_get_mode(camera,&camera->video_mode);
+  err=dc1394_video_get_mode(camera,&video_mode);
   DC1394_ERR_RTN(err, "Unable to get current video mode");
-  frame->video_mode = camera->video_mode;
+  frame->video_mode = video_mode;
 
-  err=dc1394_get_image_size_from_video_mode(camera, camera->video_mode,
+  err=dc1394_get_image_size_from_video_mode(camera, video_mode,
       frame->size, frame->size + 1);
   DC1394_ERR_RTN(err,"Could not get width/height from format/mode");
 
-  if (dc1394_is_video_mode_scalable(camera->video_mode)==DC1394_TRUE) {
+  if (dc1394_is_video_mode_scalable(video_mode)==DC1394_TRUE) {
     //fprintf(stderr,"Scalable format detected\n");
-    err=dc1394_format7_get_byte_per_packet(camera, camera->video_mode,
+    err=dc1394_format7_get_byte_per_packet(camera, video_mode,
         &frame->bytes_per_packet);
     DC1394_ERR_RTN(err, "Unable to get format 7 bytes per packet for mode %d",
-        camera->video_mode);
+        video_mode);
 
-    err=dc1394_format7_get_packet_per_frame(camera, camera->video_mode,
+    err=dc1394_format7_get_packet_per_frame(camera, video_mode,
         &frame->packets_per_frame);
     DC1394_ERR_RTN(err, "Unable to get format 7 packets per frame %d",
-        camera->video_mode);
+        video_mode);
 
-    err = dc1394_format7_get_image_position (camera, camera->video_mode,
+    err = dc1394_format7_get_image_position (camera, video_mode,
         frame->position, frame->position + 1);
     DC1394_ERR_RTN(err, "Unable to get format 7 image position");
 
-    dc1394_format7_get_color_filter (camera, camera->video_mode,
+    dc1394_format7_get_color_filter (camera, video_mode,
         &frame->color_filter);
   }
   else {
-    err=dc1394_video_get_framerate(camera,&camera->framerate);
+    err=dc1394_video_get_framerate(camera,&framerate);
     DC1394_ERR_RTN(err, "Unable to get current video framerate");
 
-    err=_dc1394_get_quadlets_per_packet(camera->video_mode, camera->framerate,
+    err=_dc1394_get_quadlets_per_packet(video_mode, framerate,
         &frame->bytes_per_packet);
     DC1394_ERR_RTN(err, "Unable to get quadlets per packet");
     frame->bytes_per_packet *= 4;
 
-    err= _dc1394_quadlets_from_format(camera, camera->video_mode,
+    err= _dc1394_quadlets_from_format(camera, video_mode,
         &frame->packets_per_frame);
     DC1394_ERR_RTN(err,"Could not get quadlets per frame");
     frame->packets_per_frame /= frame->bytes_per_packet/4;
@@ -400,7 +402,7 @@ _dc1394_capture_basic_setup (dc1394camera_t * camera,
 
   frame->total_bytes = frame->packets_per_frame * frame->bytes_per_packet;
 
-  err = dc1394_get_color_coding_from_video_mode (camera, camera->video_mode,
+  err = dc1394_get_color_coding_from_video_mode (camera, video_mode,
       &frame->color_coding);
   DC1394_ERR_RTN(err, "Unable to get color coding");
 
